; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_xfrm6_policy.c_xfrm6_init_path.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_xfrm6_policy.c_xfrm6_init_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfrm_dst = type { %struct.TYPE_8__, i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }
%struct.dst_entry = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64 }
%struct.rt6_info = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

@AF_INET6 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xfrm_dst*, %struct.dst_entry*, i32)* @xfrm6_init_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfrm6_init_path(%struct.xfrm_dst* %0, %struct.dst_entry* %1, i32 %2) #0 {
  %4 = alloca %struct.xfrm_dst*, align 8
  %5 = alloca %struct.dst_entry*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.rt6_info*, align 8
  store %struct.xfrm_dst* %0, %struct.xfrm_dst** %4, align 8
  store %struct.dst_entry* %1, %struct.dst_entry** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.dst_entry*, %struct.dst_entry** %5, align 8
  %9 = getelementptr inbounds %struct.dst_entry, %struct.dst_entry* %8, i32 0, i32 0
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @AF_INET6, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %31

15:                                               ; preds = %3
  %16 = load %struct.dst_entry*, %struct.dst_entry** %5, align 8
  %17 = bitcast %struct.dst_entry* %16 to %struct.rt6_info*
  store %struct.rt6_info* %17, %struct.rt6_info** %7, align 8
  %18 = load %struct.rt6_info*, %struct.rt6_info** %7, align 8
  %19 = getelementptr inbounds %struct.rt6_info, %struct.rt6_info* %18, i32 0, i32 0
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %21 = icmp ne %struct.TYPE_6__* %20, null
  br i1 %21, label %22, label %30

22:                                               ; preds = %15
  %23 = load %struct.rt6_info*, %struct.rt6_info** %7, align 8
  %24 = getelementptr inbounds %struct.rt6_info, %struct.rt6_info* %23, i32 0, i32 0
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.xfrm_dst*, %struct.xfrm_dst** %4, align 8
  %29 = getelementptr inbounds %struct.xfrm_dst, %struct.xfrm_dst* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 4
  br label %30

30:                                               ; preds = %22, %15
  br label %31

31:                                               ; preds = %30, %3
  %32 = load i32, i32* %6, align 4
  %33 = load %struct.xfrm_dst*, %struct.xfrm_dst** %4, align 8
  %34 = getelementptr inbounds %struct.xfrm_dst, %struct.xfrm_dst* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  store i32 %32, i32* %36, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
